var.output
Grammar

    0 $accept: start $end

    1 start: EXIT ';'
    2      | print exp ';'
    3      | assignment ';'
    4      | start print exp ';'
    5      | start assignment ';'
    6      | start EXIT ';'
    7      | ptable ';'
    8      | start ptable ';'
    9      | condn
   10      | start condn
   11      | loop
   12      | start loop

   13 assignment: id '=' exp

   14 condn: IF '(' exp ')' '{' id '=' exp ';' '}' ELSE '{' id '=' exp ';' '}'
   15      | IF '(' exp ')' '{' id '=' exp ';' '}'
   16      | IF '(' exp ')' '{' id '=' exp ';' '}' ELSE '{' IF '(' exp ')' '{' id '=' exp ';' '}' ELSE '{' id '=' exp ';' '}' '}'
   17      | IF '(' exp ')' '{' print exp ';' '}' ELSE '{' print exp ';' '}'
   18      | IF '(' exp ')' '{' print exp ';' '}'

   19 loop: WHILE '(' exp ')' '{' start '}'
   20     | DO '{' start '}' WHILE '(' exp ')' ';'
   21     | FOR '(' assignment ';' exp ';' assignment ')' '{' start '}'
   22     | FOR '(' assignment ';' exp ';' ')' '{' start '}'
   23     | FOR '(' ';' exp ';' assignment ')' '{' start '}'
   24     | FOR '(' ';' exp ';' ')' '{' start '}'

   25 exp: term
   26    | exp '+' exp
   27    | exp '-' exp
   28    | exp '*' exp
   29    | exp '/' exp
   30    | exp '%' exp
   31    | exp '>' exp
   32    | exp '<' exp
   33    | exp eq exp
   34    | exp ne exp
   35    | exp ge exp
   36    | exp le exp
   37    | '(' exp ')'
   38    | exp and exp
   39    | exp or exp

   40 term: num
   41     | id


Terminals, with rules where they appear

$end (0) 0
'%' (37) 30
'(' (40) 14 15 16 17 18 19 20 21 22 23 24 37
')' (41) 14 15 16 17 18 19 20 21 22 23 24 37
'*' (42) 28
'+' (43) 26
'-' (45) 27
'/' (47) 29
';' (59) 1 2 3 4 5 6 7 8 14 15 16 17 18 20 21 22 23 24
'<' (60) 32
'=' (61) 13 14 15 16
'>' (62) 31
'{' (123) 14 15 16 17 18 19 20 21 22 23 24
'}' (125) 14 15 16 17 18 19 20 21 22 23 24
error (256)
id (258) 13 14 15 16 41
num (259) 40
print (260) 2 4 17 18
EXIT (261) 1 6
IF (262) 14 15 16 17 18
ELSE (263) 14 16 17
WHILE (264) 19 20
DO (265) 20
FOR (266) 21 22 23 24
ptable (267) 7 8
and (268) 38
or (269) 39
eq (270) 33
ne (271) 34
ge (272) 35
le (273) 36


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
start (33)
    on left: 1 2 3 4 5 6 7 8 9 10 11 12, on right: 0 4 5 6 8 10 12
    19 20 21 22 23 24
assignment (34)
    on left: 13, on right: 3 5 21 22 23
condn (35)
    on left: 14 15 16 17 18, on right: 9 10
loop (36)
    on left: 19 20 21 22 23 24, on right: 11 12
exp (37)
    on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39, on right:
    2 4 13 14 15 16 17 18 19 20 21 22 23 24 26 27 28 29 30 31 32 33
    34 35 36 37 38 39
term (38)
    on left: 40 41, on right: 25


State 0

    0 $accept: . start $end

    id      shift, and go to state 1
    print   shift, and go to state 2
    EXIT    shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    DO      shift, and go to state 6
    FOR     shift, and go to state 7
    ptable  shift, and go to state 8

    start       go to state 9
    assignment  go to state 10
    condn       go to state 11
    loop        go to state 12


State 1

   13 assignment: id . '=' exp

    '='  shift, and go to state 13


State 2

    2 start: print . exp ';'

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 17
    term  go to state 18


State 3

    1 start: EXIT . ';'

    ';'  shift, and go to state 19


State 4

   14 condn: IF . '(' exp ')' '{' id '=' exp ';' '}' ELSE '{' id '=' exp ';' '}'
   15      | IF . '(' exp ')' '{' id '=' exp ';' '}'
   16      | IF . '(' exp ')' '{' id '=' exp ';' '}' ELSE '{' IF '(' exp ')' '{' id '=' exp ';' '}' ELSE '{' id '=' exp ';' '}' '}'
   17      | IF . '(' exp ')' '{' print exp ';' '}' ELSE '{' print exp ';' '}'
   18      | IF . '(' exp ')' '{' print exp ';' '}'

    '('  shift, and go to state 20


State 5

   19 loop: WHILE . '(' exp ')' '{' start '}'

    '('  shift, and go to state 21


State 6

   20 loop: DO . '{' start '}' WHILE '(' exp ')' ';'

    '{'  shift, and go to state 22


State 7

   21 loop: FOR . '(' assignment ';' exp ';' assignment ')' '{' start '}'
   22     | FOR . '(' assignment ';' exp ';' ')' '{' start '}'
   23     | FOR . '(' ';' exp ';' assignment ')' '{' start '}'
   24     | FOR . '(' ';' exp ';' ')' '{' start '}'

    '('  shift, and go to state 23


State 8

    7 start: ptable . ';'

    ';'  shift, and go to state 24


State 9

    0 $accept: start . $end
    4 start: start . print exp ';'
    5      | start . assignment ';'
    6      | start . EXIT ';'
    8      | start . ptable ';'
   10      | start . condn
   12      | start . loop

    $end    shift, and go to state 25
    id      shift, and go to state 1
    print   shift, and go to state 26
    EXIT    shift, and go to state 27
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    DO      shift, and go to state 6
    FOR     shift, and go to state 7
    ptable  shift, and go to state 28

    assignment  go to state 29
    condn       go to state 30
    loop        go to state 31


State 10

    3 start: assignment . ';'

    ';'  shift, and go to state 32


State 11

    9 start: condn .

    $default  reduce using rule 9 (start)


State 12

   11 start: loop .

    $default  reduce using rule 11 (start)


State 13

   13 assignment: id '=' . exp

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 33
    term  go to state 18


State 14

   41 term: id .

    $default  reduce using rule 41 (term)


State 15

   40 term: num .

    $default  reduce using rule 40 (term)


State 16

   37 exp: '(' . exp ')'

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 34
    term  go to state 18


State 17

    2 start: print exp . ';'
   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   30    | exp . '%' exp
   31    | exp . '>' exp
   32    | exp . '<' exp
   33    | exp . eq exp
   34    | exp . ne exp
   35    | exp . ge exp
   36    | exp . le exp
   38    | exp . and exp
   39    | exp . or exp

    and  shift, and go to state 35
    or   shift, and go to state 36
    '>'  shift, and go to state 37
    '<'  shift, and go to state 38
    eq   shift, and go to state 39
    ne   shift, and go to state 40
    ge   shift, and go to state 41
    le   shift, and go to state 42
    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '%'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    ';'  shift, and go to state 48


State 18

   25 exp: term .

    $default  reduce using rule 25 (exp)


State 19

    1 start: EXIT ';' .

    $default  reduce using rule 1 (start)


State 20

   14 condn: IF '(' . exp ')' '{' id '=' exp ';' '}' ELSE '{' id '=' exp ';' '}'
   15      | IF '(' . exp ')' '{' id '=' exp ';' '}'
   16      | IF '(' . exp ')' '{' id '=' exp ';' '}' ELSE '{' IF '(' exp ')' '{' id '=' exp ';' '}' ELSE '{' id '=' exp ';' '}' '}'
   17      | IF '(' . exp ')' '{' print exp ';' '}' ELSE '{' print exp ';' '}'
   18      | IF '(' . exp ')' '{' print exp ';' '}'

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 49
    term  go to state 18


State 21

   19 loop: WHILE '(' . exp ')' '{' start '}'

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 50
    term  go to state 18


State 22

   20 loop: DO '{' . start '}' WHILE '(' exp ')' ';'

    id      shift, and go to state 1
    print   shift, and go to state 2
    EXIT    shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    DO      shift, and go to state 6
    FOR     shift, and go to state 7
    ptable  shift, and go to state 8

    start       go to state 51
    assignment  go to state 10
    condn       go to state 11
    loop        go to state 12


State 23

   21 loop: FOR '(' . assignment ';' exp ';' assignment ')' '{' start '}'
   22     | FOR '(' . assignment ';' exp ';' ')' '{' start '}'
   23     | FOR '(' . ';' exp ';' assignment ')' '{' start '}'
   24     | FOR '(' . ';' exp ';' ')' '{' start '}'

    id   shift, and go to state 1
    ';'  shift, and go to state 52

    assignment  go to state 53


State 24

    7 start: ptable ';' .

    $default  reduce using rule 7 (start)


State 25

    0 $accept: start $end .

    $default  accept


State 26

    4 start: start print . exp ';'

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 54
    term  go to state 18


State 27

    6 start: start EXIT . ';'

    ';'  shift, and go to state 55


State 28

    8 start: start ptable . ';'

    ';'  shift, and go to state 56


State 29

    5 start: start assignment . ';'

    ';'  shift, and go to state 57


State 30

   10 start: start condn .

    $default  reduce using rule 10 (start)


State 31

   12 start: start loop .

    $default  reduce using rule 12 (start)


State 32

    3 start: assignment ';' .

    $default  reduce using rule 3 (start)


State 33

   13 assignment: id '=' exp .
   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   30    | exp . '%' exp
   31    | exp . '>' exp
   32    | exp . '<' exp
   33    | exp . eq exp
   34    | exp . ne exp
   35    | exp . ge exp
   36    | exp . le exp
   38    | exp . and exp
   39    | exp . or exp

    and  shift, and go to state 35
    or   shift, and go to state 36
    '>'  shift, and go to state 37
    '<'  shift, and go to state 38
    eq   shift, and go to state 39
    ne   shift, and go to state 40
    ge   shift, and go to state 41
    le   shift, and go to state 42
    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '%'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 13 (assignment)


State 34

   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   30    | exp . '%' exp
   31    | exp . '>' exp
   32    | exp . '<' exp
   33    | exp . eq exp
   34    | exp . ne exp
   35    | exp . ge exp
   36    | exp . le exp
   37    | '(' exp . ')'
   38    | exp . and exp
   39    | exp . or exp

    and  shift, and go to state 35
    or   shift, and go to state 36
    '>'  shift, and go to state 37
    '<'  shift, and go to state 38
    eq   shift, and go to state 39
    ne   shift, and go to state 40
    ge   shift, and go to state 41
    le   shift, and go to state 42
    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '%'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    ')'  shift, and go to state 58


State 35

   38 exp: exp and . exp

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 59
    term  go to state 18


State 36

   39 exp: exp or . exp

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 60
    term  go to state 18


State 37

   31 exp: exp '>' . exp

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 61
    term  go to state 18


State 38

   32 exp: exp '<' . exp

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 62
    term  go to state 18


State 39

   33 exp: exp eq . exp

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 63
    term  go to state 18


State 40

   34 exp: exp ne . exp

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 64
    term  go to state 18


State 41

   35 exp: exp ge . exp

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 65
    term  go to state 18


State 42

   36 exp: exp le . exp

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 66
    term  go to state 18


State 43

   26 exp: exp '+' . exp

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 67
    term  go to state 18


State 44

   27 exp: exp '-' . exp

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 68
    term  go to state 18


State 45

   30 exp: exp '%' . exp

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 69
    term  go to state 18


State 46

   28 exp: exp '*' . exp

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 70
    term  go to state 18


State 47

   29 exp: exp '/' . exp

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 71
    term  go to state 18


State 48

    2 start: print exp ';' .

    $default  reduce using rule 2 (start)


State 49

   14 condn: IF '(' exp . ')' '{' id '=' exp ';' '}' ELSE '{' id '=' exp ';' '}'
   15      | IF '(' exp . ')' '{' id '=' exp ';' '}'
   16      | IF '(' exp . ')' '{' id '=' exp ';' '}' ELSE '{' IF '(' exp ')' '{' id '=' exp ';' '}' ELSE '{' id '=' exp ';' '}' '}'
   17      | IF '(' exp . ')' '{' print exp ';' '}' ELSE '{' print exp ';' '}'
   18      | IF '(' exp . ')' '{' print exp ';' '}'
   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   30    | exp . '%' exp
   31    | exp . '>' exp
   32    | exp . '<' exp
   33    | exp . eq exp
   34    | exp . ne exp
   35    | exp . ge exp
   36    | exp . le exp
   38    | exp . and exp
   39    | exp . or exp

    and  shift, and go to state 35
    or   shift, and go to state 36
    '>'  shift, and go to state 37
    '<'  shift, and go to state 38
    eq   shift, and go to state 39
    ne   shift, and go to state 40
    ge   shift, and go to state 41
    le   shift, and go to state 42
    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '%'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    ')'  shift, and go to state 72


State 50

   19 loop: WHILE '(' exp . ')' '{' start '}'
   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   30    | exp . '%' exp
   31    | exp . '>' exp
   32    | exp . '<' exp
   33    | exp . eq exp
   34    | exp . ne exp
   35    | exp . ge exp
   36    | exp . le exp
   38    | exp . and exp
   39    | exp . or exp

    and  shift, and go to state 35
    or   shift, and go to state 36
    '>'  shift, and go to state 37
    '<'  shift, and go to state 38
    eq   shift, and go to state 39
    ne   shift, and go to state 40
    ge   shift, and go to state 41
    le   shift, and go to state 42
    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '%'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    ')'  shift, and go to state 73


State 51

    4 start: start . print exp ';'
    5      | start . assignment ';'
    6      | start . EXIT ';'
    8      | start . ptable ';'
   10      | start . condn
   12      | start . loop
   20 loop: DO '{' start . '}' WHILE '(' exp ')' ';'

    id      shift, and go to state 1
    print   shift, and go to state 26
    EXIT    shift, and go to state 27
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    DO      shift, and go to state 6
    FOR     shift, and go to state 7
    ptable  shift, and go to state 28
    '}'     shift, and go to state 74

    assignment  go to state 29
    condn       go to state 30
    loop        go to state 31


State 52

   23 loop: FOR '(' ';' . exp ';' assignment ')' '{' start '}'
   24     | FOR '(' ';' . exp ';' ')' '{' start '}'

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 75
    term  go to state 18


State 53

   21 loop: FOR '(' assignment . ';' exp ';' assignment ')' '{' start '}'
   22     | FOR '(' assignment . ';' exp ';' ')' '{' start '}'

    ';'  shift, and go to state 76


State 54

    4 start: start print exp . ';'
   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   30    | exp . '%' exp
   31    | exp . '>' exp
   32    | exp . '<' exp
   33    | exp . eq exp
   34    | exp . ne exp
   35    | exp . ge exp
   36    | exp . le exp
   38    | exp . and exp
   39    | exp . or exp

    and  shift, and go to state 35
    or   shift, and go to state 36
    '>'  shift, and go to state 37
    '<'  shift, and go to state 38
    eq   shift, and go to state 39
    ne   shift, and go to state 40
    ge   shift, and go to state 41
    le   shift, and go to state 42
    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '%'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    ';'  shift, and go to state 77


State 55

    6 start: start EXIT ';' .

    $default  reduce using rule 6 (start)


State 56

    8 start: start ptable ';' .

    $default  reduce using rule 8 (start)


State 57

    5 start: start assignment ';' .

    $default  reduce using rule 5 (start)


State 58

   37 exp: '(' exp ')' .

    $default  reduce using rule 37 (exp)


State 59

   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   30    | exp . '%' exp
   31    | exp . '>' exp
   32    | exp . '<' exp
   33    | exp . eq exp
   34    | exp . ne exp
   35    | exp . ge exp
   36    | exp . le exp
   38    | exp . and exp
   38    | exp and exp .
   39    | exp . or exp

    '>'  shift, and go to state 37
    '<'  shift, and go to state 38
    eq   shift, and go to state 39
    ne   shift, and go to state 40
    ge   shift, and go to state 41
    le   shift, and go to state 42
    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '%'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 38 (exp)


State 60

   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   30    | exp . '%' exp
   31    | exp . '>' exp
   32    | exp . '<' exp
   33    | exp . eq exp
   34    | exp . ne exp
   35    | exp . ge exp
   36    | exp . le exp
   38    | exp . and exp
   39    | exp . or exp
   39    | exp or exp .

    '>'  shift, and go to state 37
    '<'  shift, and go to state 38
    eq   shift, and go to state 39
    ne   shift, and go to state 40
    ge   shift, and go to state 41
    le   shift, and go to state 42
    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '%'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 39 (exp)


State 61

   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   30    | exp . '%' exp
   31    | exp . '>' exp
   31    | exp '>' exp .
   32    | exp . '<' exp
   33    | exp . eq exp
   34    | exp . ne exp
   35    | exp . ge exp
   36    | exp . le exp
   38    | exp . and exp
   39    | exp . or exp

    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '%'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 31 (exp)


State 62

   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   30    | exp . '%' exp
   31    | exp . '>' exp
   32    | exp . '<' exp
   32    | exp '<' exp .
   33    | exp . eq exp
   34    | exp . ne exp
   35    | exp . ge exp
   36    | exp . le exp
   38    | exp . and exp
   39    | exp . or exp

    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '%'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 32 (exp)


State 63

   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   30    | exp . '%' exp
   31    | exp . '>' exp
   32    | exp . '<' exp
   33    | exp . eq exp
   33    | exp eq exp .
   34    | exp . ne exp
   35    | exp . ge exp
   36    | exp . le exp
   38    | exp . and exp
   39    | exp . or exp

    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '%'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 33 (exp)


State 64

   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   30    | exp . '%' exp
   31    | exp . '>' exp
   32    | exp . '<' exp
   33    | exp . eq exp
   34    | exp . ne exp
   34    | exp ne exp .
   35    | exp . ge exp
   36    | exp . le exp
   38    | exp . and exp
   39    | exp . or exp

    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '%'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 34 (exp)


State 65

   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   30    | exp . '%' exp
   31    | exp . '>' exp
   32    | exp . '<' exp
   33    | exp . eq exp
   34    | exp . ne exp
   35    | exp . ge exp
   35    | exp ge exp .
   36    | exp . le exp
   38    | exp . and exp
   39    | exp . or exp

    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '%'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 35 (exp)


State 66

   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   30    | exp . '%' exp
   31    | exp . '>' exp
   32    | exp . '<' exp
   33    | exp . eq exp
   34    | exp . ne exp
   35    | exp . ge exp
   36    | exp . le exp
   36    | exp le exp .
   38    | exp . and exp
   39    | exp . or exp

    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '%'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 36 (exp)


State 67

   26 exp: exp . '+' exp
   26    | exp '+' exp .
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   30    | exp . '%' exp
   31    | exp . '>' exp
   32    | exp . '<' exp
   33    | exp . eq exp
   34    | exp . ne exp
   35    | exp . ge exp
   36    | exp . le exp
   38    | exp . and exp
   39    | exp . or exp

    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 26 (exp)


State 68

   26 exp: exp . '+' exp
   27    | exp . '-' exp
   27    | exp '-' exp .
   28    | exp . '*' exp
   29    | exp . '/' exp
   30    | exp . '%' exp
   31    | exp . '>' exp
   32    | exp . '<' exp
   33    | exp . eq exp
   34    | exp . ne exp
   35    | exp . ge exp
   36    | exp . le exp
   38    | exp . and exp
   39    | exp . or exp

    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 27 (exp)


State 69

   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   30    | exp . '%' exp
   30    | exp '%' exp .
   31    | exp . '>' exp
   32    | exp . '<' exp
   33    | exp . eq exp
   34    | exp . ne exp
   35    | exp . ge exp
   36    | exp . le exp
   38    | exp . and exp
   39    | exp . or exp

    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 30 (exp)


State 70

   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   28    | exp '*' exp .
   29    | exp . '/' exp
   30    | exp . '%' exp
   31    | exp . '>' exp
   32    | exp . '<' exp
   33    | exp . eq exp
   34    | exp . ne exp
   35    | exp . ge exp
   36    | exp . le exp
   38    | exp . and exp
   39    | exp . or exp

    $default  reduce using rule 28 (exp)


State 71

   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   29    | exp '/' exp .
   30    | exp . '%' exp
   31    | exp . '>' exp
   32    | exp . '<' exp
   33    | exp . eq exp
   34    | exp . ne exp
   35    | exp . ge exp
   36    | exp . le exp
   38    | exp . and exp
   39    | exp . or exp

    $default  reduce using rule 29 (exp)


State 72

   14 condn: IF '(' exp ')' . '{' id '=' exp ';' '}' ELSE '{' id '=' exp ';' '}'
   15      | IF '(' exp ')' . '{' id '=' exp ';' '}'
   16      | IF '(' exp ')' . '{' id '=' exp ';' '}' ELSE '{' IF '(' exp ')' '{' id '=' exp ';' '}' ELSE '{' id '=' exp ';' '}' '}'
   17      | IF '(' exp ')' . '{' print exp ';' '}' ELSE '{' print exp ';' '}'
   18      | IF '(' exp ')' . '{' print exp ';' '}'

    '{'  shift, and go to state 78


State 73

   19 loop: WHILE '(' exp ')' . '{' start '}'

    '{'  shift, and go to state 79


State 74

   20 loop: DO '{' start '}' . WHILE '(' exp ')' ';'

    WHILE  shift, and go to state 80


State 75

   23 loop: FOR '(' ';' exp . ';' assignment ')' '{' start '}'
   24     | FOR '(' ';' exp . ';' ')' '{' start '}'
   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   30    | exp . '%' exp
   31    | exp . '>' exp
   32    | exp . '<' exp
   33    | exp . eq exp
   34    | exp . ne exp
   35    | exp . ge exp
   36    | exp . le exp
   38    | exp . and exp
   39    | exp . or exp

    and  shift, and go to state 35
    or   shift, and go to state 36
    '>'  shift, and go to state 37
    '<'  shift, and go to state 38
    eq   shift, and go to state 39
    ne   shift, and go to state 40
    ge   shift, and go to state 41
    le   shift, and go to state 42
    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '%'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    ';'  shift, and go to state 81


State 76

   21 loop: FOR '(' assignment ';' . exp ';' assignment ')' '{' start '}'
   22     | FOR '(' assignment ';' . exp ';' ')' '{' start '}'

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 82
    term  go to state 18


State 77

    4 start: start print exp ';' .

    $default  reduce using rule 4 (start)


State 78

   14 condn: IF '(' exp ')' '{' . id '=' exp ';' '}' ELSE '{' id '=' exp ';' '}'
   15      | IF '(' exp ')' '{' . id '=' exp ';' '}'
   16      | IF '(' exp ')' '{' . id '=' exp ';' '}' ELSE '{' IF '(' exp ')' '{' id '=' exp ';' '}' ELSE '{' id '=' exp ';' '}' '}'
   17      | IF '(' exp ')' '{' . print exp ';' '}' ELSE '{' print exp ';' '}'
   18      | IF '(' exp ')' '{' . print exp ';' '}'

    id     shift, and go to state 83
    print  shift, and go to state 84


State 79

   19 loop: WHILE '(' exp ')' '{' . start '}'

    id      shift, and go to state 1
    print   shift, and go to state 2
    EXIT    shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    DO      shift, and go to state 6
    FOR     shift, and go to state 7
    ptable  shift, and go to state 8

    start       go to state 85
    assignment  go to state 10
    condn       go to state 11
    loop        go to state 12


State 80

   20 loop: DO '{' start '}' WHILE . '(' exp ')' ';'

    '('  shift, and go to state 86


State 81

   23 loop: FOR '(' ';' exp ';' . assignment ')' '{' start '}'
   24     | FOR '(' ';' exp ';' . ')' '{' start '}'

    id   shift, and go to state 1
    ')'  shift, and go to state 87

    assignment  go to state 88


State 82

   21 loop: FOR '(' assignment ';' exp . ';' assignment ')' '{' start '}'
   22     | FOR '(' assignment ';' exp . ';' ')' '{' start '}'
   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   30    | exp . '%' exp
   31    | exp . '>' exp
   32    | exp . '<' exp
   33    | exp . eq exp
   34    | exp . ne exp
   35    | exp . ge exp
   36    | exp . le exp
   38    | exp . and exp
   39    | exp . or exp

    and  shift, and go to state 35
    or   shift, and go to state 36
    '>'  shift, and go to state 37
    '<'  shift, and go to state 38
    eq   shift, and go to state 39
    ne   shift, and go to state 40
    ge   shift, and go to state 41
    le   shift, and go to state 42
    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '%'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    ';'  shift, and go to state 89


State 83

   14 condn: IF '(' exp ')' '{' id . '=' exp ';' '}' ELSE '{' id '=' exp ';' '}'
   15      | IF '(' exp ')' '{' id . '=' exp ';' '}'
   16      | IF '(' exp ')' '{' id . '=' exp ';' '}' ELSE '{' IF '(' exp ')' '{' id '=' exp ';' '}' ELSE '{' id '=' exp ';' '}' '}'

    '='  shift, and go to state 90


State 84

   17 condn: IF '(' exp ')' '{' print . exp ';' '}' ELSE '{' print exp ';' '}'
   18      | IF '(' exp ')' '{' print . exp ';' '}'

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 91
    term  go to state 18


State 85

    4 start: start . print exp ';'
    5      | start . assignment ';'
    6      | start . EXIT ';'
    8      | start . ptable ';'
   10      | start . condn
   12      | start . loop
   19 loop: WHILE '(' exp ')' '{' start . '}'

    id      shift, and go to state 1
    print   shift, and go to state 26
    EXIT    shift, and go to state 27
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    DO      shift, and go to state 6
    FOR     shift, and go to state 7
    ptable  shift, and go to state 28
    '}'     shift, and go to state 92

    assignment  go to state 29
    condn       go to state 30
    loop        go to state 31


State 86

   20 loop: DO '{' start '}' WHILE '(' . exp ')' ';'

    id   shift, and go to state 14
    num  shift, and go to state 15
    '('  shift, and go to state 16

    exp   go to state 93
    term  go to state 18


State 87

   24 loop: FOR '(' ';' exp ';' ')' . '{' start '}'

    '{'  shift, and go to state 94


State 88

   23 loop: FOR '(' ';' exp ';' assignment . ')' '{' start '}'

    ')'  shift, and go to state 95


State 89

   21 loop: FOR '(' assignment ';' exp ';' . assignment ')' '{' start '}'
   22     | FOR '(' assignment ';' exp ';' . ')' '{' start '}'

    id   shift, and go to state 1
    ')'  shift, and go to state 96

    assignment  go to state 97


State 90
